# bringetto-trading-agent

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  DISCLAIMER.md  Dockerfile  Procfile  alembic.ini  docker-compose.yml  pyproject.toml  railway.json  requirements.txt  start.py
.github/workflows/: tests.yml
agent/: __init__.py  main.py
agent/analysis/: __init__.py
agent/api/: __init__.py  auth.py  main.py  state.py
agent/api/routes/: __init__.py  analytics.py  controls.py  instrumentation.py  market.py  performance.py  strategies.py  trades.py
agent/config/: __init__.py  constants.py  settings.py
agent/data/: __init__.py  connection_manager.py  indicators.py  streaming.py  symbol_scanner.py
agent/database/: __init__.py  connection.py  models.py  repositories.py
agent/database/migrations/: env.py
agent/database/migrations/versions/: 20260203_0001_initial_schema.py  20260204_0002_add_account_activity_and_order_types.py  20260206_0003_add_instrumentation_snapshots.py
agent/execution/: __init__.py  broker.py  sizer.py
agent/ml/: __init__.py
agent/monitoring/: __init__.py  instrumentation.py  logger.py  metrics.py
agent/risk/: __init__.py  circuit_breaker.py  validator.py
agent/strategies/: __init__.py  base.py  eod_reversal.py  gap_and_go.py  momentum_scalp.py  orb.py  vwap_reversion.py
agent/strategies/experimental/: __init__.py
dashboard/: .env.example  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  vercel.json
dashboard/app/: layout.tsx  page.tsx  providers.tsx
dashboard/app/analytics/: page.tsx
dashboard/app/api/auth/login/: route.ts
dashboard/app/api/auth/logout/: route.ts
dashboard/app/disclaimer/: page.tsx
dashboard/app/instrumentation/: page.tsx
dashboard/app/login/: page.tsx
dashboard/app/privacy/: page.tsx
dashboard/app/settings/: page.tsx
dashboard/app/strategies/: page.tsx
dashboard/app/terms/: page.tsx
dashboard/app/trades/: page.tsx
dashboard/components/: disclaimer-banner.tsx  instrumentation-widgets.tsx  layout-wrapper.tsx  market-status.tsx  recent-trades.tsx  sidebar.tsx  status-card.tsx  strategy-tooltip.tsx  timezone-selector.tsx
dashboard/components/charts/: strategy-performance.tsx
dashboard/lib/: api.ts  strategy-descriptions.ts  timezone-store.ts  utils.ts
scripts/: init_db.py  setup_db.py
tests/: __init__.py  conftest.py
tests/unit/: test_risk.py  test_strategies.py  test_strategy_data_feeds.py  test_strategy_signals.py
